--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 key.py
 .vscode
-
+*.csv
 
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
